fix low foreground contrast in index

--- a/global.css
+++ b/global.css
@@ -24,7 +24,7 @@ body {
 
 .header__title {
   font-size: 4rem;
-  color: oklch(100% 0% 0);
+  color: oklch(0% 0% 0);
   text-align: center;
 }
 
@@ -78,5 +78,5 @@ body {
   padding: 1rem;
   font-size: 1.5rem;
 
-  color: oklch(100% 0% 0);
+  color: oklch(0% 0% 0);
 }
